--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-application.yml
 
 ### STS ###
 .apt_generated
@@ -37,4 +36,5 @@ out/
 ### VS Code ###
 .vscode/
 
+## Personal Details ###
 application.yml
